--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "cdbreact": "^1.5.3",
     "contactjs": "^1.4.1",
     "emailjs": "^4.0.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.3.1",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
