--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "6.12.6",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.3.8",
     "cdb": "^0.3.4",
     "cdbreact": "^1.5.3",
     "contactjs": "^1.4.1",
     "emailjs": "^4.0.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
+    "react-is": "^19.2.0",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "schema-utils": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
